# kafkactl

./: Dockerfile  Dockerfile.dev  Makefile  README.md  adminapi.py  kafkaconfig.yaml  pyproject.toml
.github/workflows/: release.yaml  tests.yaml
src/: adminapi.py
src/kafka/: __init__.py  acl.py  broker.py  cluster.py  consumer.py  consumer_group.py  helpers.py  kafka_resource.py  producer.py  topic.py
src/kafkactl/: alter.py  cli.py  consume.py  create.py  delete.py  describe.py  exec.py  get.py  list.py  produce.py  topic.py
tests/: test_kafka.py  test_kafka_client.py  test_kafka_topic.py
tests/e2e/: alter-topic-config.properties  confluent-platform-singlenode.yaml  confluent-platform.yaml  setup.sh  teardown.sh
