[tool.poetry]
name = "kafkactl"
version = "0.1.0"
description = "A command line tool for controlling and interacting with Kafka."
authors = ["Aidan Melen <aidan-melen@protonmail.com>"]
readme = "README.md"
homepage = "https://github.com/aidanmelen/kafkactl-py"
repository = "https://github.com/aidanmelen/kafkactl-py"
license = "MIT"
packages = [{include = "kafkactl", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.3"
confluent-kafka = "^2.0.2"
deepmerge = "^1.1.0"

[tool.poetry.group.test.dependencies]
mock = "^4.0.3"
coverage = "^7.1.0"

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"

[tool.poetry.scripts]
k = "kafkactl.cli:cli"
kafkactl = "kafkactl.cli:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"